fix:update chat function
